# 2024_EEEE2076_GROUP6

./: .gitignore  ModelPart.cpp  ModelPart.h  ModelPartList_8h.html  ModelPartList_8h_source.html  ModelPart_8h.html  ModelPart_8h_source.html  README.md  WaiiPati.txt  annotated.html  annotated_dup.js  backgrounddialog.h  backgrounddialog.ui  backgrounddialog_8h.html  backgrounddialog_8h.js  backgrounddialog_8h_source.html  classBackgroundDialog-members.html  classBackgroundDialog.html  classBackgroundDialog.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classModelPart-members.html  classModelPart.html  classModelPart.js  classModelPartList-members.html  classModelPartList.html  classModelPartList.js  classOptionDialog-members.html  classOptionDialog.html  classOptionDialog.js  classVRRenderThread-members.html  classVRRenderThread.html  classVRRenderThread.js  classes.html  files.html  files_dup.js  functions.html  functions_enum.html  functions_eval.html  (+22 more)
.github/workflows/: doxygen-deploy.yml
GUI/: CMakeLists.txt  Doxyfile  ModelPart.cpp  ModelPart.h  ModelPartList.cpp  ModelPartList.h  VRRenderThread.cpp  VRRenderThread.h  backgrounddialog.cpp  backgrounddialog.ui  darktheme.qss  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.h  optiondialog.ui  vrrenderthread.cpp  vrrenderthread.h
GUI/.github/workflows/: doxygen-deploy.yml
GUI/html/: annotated_dup.js  class_model_part_list.js  class_v_r_render_thread.js  files_dup.js  hierarchy.js  navtreedata.js  navtreeindex0.js
GUI/html/search/: all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_b.js  all_d.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  functions_b.js  functions_c.js  searchdata.js  variables_0.js
GUI/latex/: _model_part_8h_source.tex  _model_part_list_8h.tex  _model_part_list_8h_source.tex  annotated.tex  backgrounddialog_8h_source.tex  class_background_dialog.eps  class_background_dialog.tex  class_main_window.tex  class_model_part.tex  class_model_part_list.tex  class_option_dialog.tex  class_v_r_render_thread.eps  class_v_r_render_thread.tex  files.tex  hierarchy.tex  mainwindow_8h_source.tex  optiondialog_8h_source.tex  refman.tex  skyboxutils_8h_source.tex  vrrenderthread_8cpp.tex  vrrenderthread_8h_source.tex
ProjectWeek2/: CMakeLists.txt  ModelPart.cpp  ModelPart.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  optiondialog.cpp  optiondialog.ui
VRCADSTUDIO2025/: CMakeLists.txt  ModelPart.cpp  ModelPartList.h  backgrounddialog.cpp  backgrounddialog.h  mainwindow.cpp  optiondialog.cpp  optiondialog.h  optiondialog.ui  skyboxutils.cpp  skyboxutils.h  vrrenderthread.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  (+3 more)
